# ai-kit

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.claude-plugin/: plugin.json
commands/: review-spec.md
docs/: ia-helper-tools.md
docs/architecture/: status-line-pipeline.md
docs/prds/: 000-ai-kit-overhaul-requirements.md  e7-install-ux-worktree-visibility-v1.0-prd.md  install-wizard-tui-v1.0-prd.md  status-line-architecture-pattern-v1.0-prd.md  status-line-architecture-refinement-v1.0-prd.md  status-line-config-binding-v1.0-prd.md  status-line-render-refactor-v1.0-prd.md  statusline-config-extensibility-v1.0-prd.md  statusline-external-segments-v1.0-prd.md  wizard-ux-redesign-v1.0-prd.md
docs/refactor/: lint-ruleset-and-triage.md
docs/superpowers/: LOOP-GUIDE-e7.md
docs/superpowers/plans/: 2026-06-07-installer-registry-ux.md  2026-06-14-e1-review-spec-skill.md  2026-06-17-e2-mermaid-color-shape-audit.md  2026-06-18-e3-statusline-fixes-crossplatform.md  2026-06-18-e4a-statusline-config.md  2026-06-18-e4b-statusline-color-subsystem.md  2026-06-19-e4c-external-segments-core.md  2026-06-19-e4c-external-segments-wizard.md  2026-06-19-e5a-statusline-robustness-doctor.md  2026-06-19-e5b-installer-bootstrapper-skills-wizard.md  2026-06-19-e5c-statusline-config-wizard.md  2026-06-19-e6-markdown-to-pdf.md  2026-06-20-e7-loop-PLAN.md  2026-06-20-status-line-render-refactor.md  2026-06-21-status-line-architecture-pattern.md  2026-06-22-status-line-architecture-refinement.md  2026-06-23-install-wizard-tui.md  2026-06-23-status-line-config-binding.md  2026-06-24-wizard-redesign-A-engine-data.md  2026-06-24-wizard-redesign-B-ui.md
docs/superpowers/specs/: 2026-06-07-installer-registry-ux-design.md  2026-06-18-e3-statusline-fixes-crossplatform-design.md  2026-06-18-e4b-statusline-color-subsystem-design.md  2026-06-19-e4c-statusline-external-segments-design.md  2026-06-19-e5-installer-wizard-design.md  2026-06-19-e6-markdown-to-pdf-design.md  2026-06-20-e7-execution-design.md
docs/wizard-redesign/: mockup-textual.html
docs/wizard-redesign/prototypes/: _protodata.py  mockup-textual.py
examples/segments/: sysmem  system_memory
skills/applying-review-feedback/: SKILL.md
skills/applying-review-feedback/evals/: test-scenarios.md
skills/commit-message/: SKILL.md
skills/cst-refactor/: SKILL.md  codemod_template.py
skills/markdown-to-pdf/: SKILL.md
skills/markdown-to-pdf/examples/: sample-with-mermaid.md
skills/markdown-to-pdf/references/: backends.md
skills/markdown-to-pdf/scripts/: detect_backends.py  markdown_to_pdf.py  render_mermaid.py
skills/mermaid-audit/: SKILL.md  template.md
skills/mermaid-audit/evals/: judge-protocol.md  score_consensus.py
skills/mermaid-audit/evals/fixtures/: 01-flat-gray.md  02-garish.md  03-decision-rect.md  04-clean.md  gold.json
skills/mermaid-audit/examples/: bad-decision-rect.mmd  bad-garish.mmd  bad-no-style.mmd  bad-reserved-end.mmd  bad-too-wide.mmd  bad-unquoted-parens.mmd  color-shape.md  good-and-bad.md  good-flowchart.mmd  good-palette.mmd  good-subgraphs.mmd
skills/mermaid-audit/references/: palettes.md
skills/mermaid-audit/scripts/: audit_mermaid.py  audit_mermaid.sh  mermaid_style.py
skills/review-spec/: SKILL.md
skills/review-spec/evals/: 01-superpowers-plan-routes-writing-plans.md  02-gsd-plan-routes-native-cmd.md  03-generic-doc-direct-edit.md  04-ambiguous-detection-fallback.md
skills/reviewing-specs/: SKILL.md
skills/reviewing-specs/evals/: orchestrator-integration.md  test-scenarios.md
skills/reviewing-specs/evals/fixtures/: design-bad.md  design-good.md  plan-bad.md  sample-review-report.md
skills/reviewing-specs/references/frameworks/: SCHEMA.md  bmad.md  gsd.md  kiro.md  openspec.md  spec-kit.md  superpowers.md
tests/: test_arch.py  test_external_segments.py  test_framework_profiles.py  test_install.sh  test_markdown_to_pdf.py  test_mermaid_style.py  test_setup.py  test_status_line.py  test_statusline_doctor.py  test_sysmem_e2e.py  test_system_memory_e2e.py  test_wizard_app.py  test_wizard_pty.py  test_worktree_e2e.py
tests/fixtures/: sample-input.json  statusline-edited.toml
tests/fixtures/golden/: expected.txt  inputs.json
tools/: install.sh  segments_inventory.toml  setup.py  status-line.py  statusline-doctor.py  statusline.toml.sample  wizard_app.py
tools/installer/: engine.py  model.py  registry.toml
