# Dev-only project metadata. The ai-kit RUNTIME (tools/status-line.py) is
# stdlib-only and runs under the user's own python3 — it has NO dependencies.
# This file exists solely to give `uv` a reproducible dev/lint environment
# (ruff + pylint + pyright + vulture + pre-commit) and to hold their config.
[project]
name = "ai-kit"
version = "0.0.0"
description = "Dev/lint environment for ai-kit (runtime is stdlib-only)."
requires-python = ">=3.12,<3.13"

[tool.uv]
# Not an installable package — just scripts + a dev toolchain. Don't build it.
package = false

[dependency-groups]
# Pinned via uv.lock; specifiers are compatible-release floors. `make dev`
# (uv sync) materializes these into .venv; `make validate` runs them via uv run.
dev = [
    "ruff~=0.14",
    "pylint~=4.0",
    "pyright~=1.1",
    "vulture~=2.14",
    "pre-commit~=4.4",
]

# ─────────────────────────── ruff ───────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    # The status line is intentionally unicode-rich UI (×, —, …, emoji, box-drawing).
    # The ambiguous-unicode rules flag these as look-alikes; that's the whole point here.
    "RUF001", # ambiguous char in a string
    "RUF002", # ambiguous char in a docstring
    "RUF003", # ambiguous char in a comment
]

[tool.ruff.lint.per-file-ignores]
# Tests held to a lighter, permissive bar (idiomatic test patterns):
#   E741 ambiguous loop var `l`, E731 lambda-assign, E402 imports after sys.path setup,
#   E702 compound test setup lines, E401 grouped imports, RUF012 TestCase class attrs.
"tests/*" = ["E741", "E731", "E402", "E702", "E401", "RUF012"]

# ─────────────────────────── pylint ───────────────────────────
[tool.pylint.main]
py-version = "3.12"
# Docstrings required only where they add signal: builders (seg_*), private
# helpers (_*), and tests are self-documenting via the segment contract / name.
no-docstring-rgx = "^(_|seg_|test_)"

[tool.pylint.basic]
# `bar` is a domain term here (context / effort progress bar), not a placeholder.
bad-names = ["foo", "baz", "toto", "tutu", "tata"]
# Conditional stdlib import aliases that read as module-level constants.
good-names = ["tomllib"]

[tool.pylint.design]
max-args = 8                  # safe_build/render thread the builder context explicitly
max-positional-arguments = 8
# TEMP (relax-now / tighten-after-Phase-2): the monolithic build_data/pack_line
# carry high local/branch/return counts that the FR-R.1/2/3 restructure removes.
# Relaxed so the enforced gate is green and installable during the refactor;
# Task 2.6 tightens these back to strict targets (locals=20, branches=12,
# returns=6, statements=50) once the restructure has actually reduced them.
max-locals = 40
max-branches = 30
max-returns = 10
max-statements = 80

[tool.pylint."messages control"]
disable = [
    "too-many-lines",         # deliberate single-file drop-in script; shrinks as segments
                              # externalize (E4c direction). Re-evaluate after externalization.
    "unused-argument",        # uniform segment-builder contract (data, avail, theme): not every
                              # builder reads all three; renaming would break the contract.
    "duplicate-code",         # cross-occurrence false positives on small idiomatic blocks.
    "fixme",                  # TODO/NOTE markers are allowed in-tree.
    "too-few-public-methods", # data carriers (e.g. _RenderData dict subclass) are not APIs.
]

# ─────────────────────────── vulture ───────────────────────────
[tool.vulture]
min_confidence = 80
paths = ["tools/status-line.py", "tools/setup.py"]
# signal-handler / context-manager params required by their signature
ignore_names = ["signum", "frame"]

# ─────────────────────────── pyright ───────────────────────────
[tool.pyright]
include = ["tools/status-line.py", "tools/setup.py"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
